# article-rec-db

./: .gitignore  .pre-commit-config.yaml  Brewfile  Karfile  README.md  pyproject.toml  tox.ini
.github/workflows/: on-merge-to-main.yaml  on-pull-request.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 2023_11_08_1543-a7616acbfe1c_create_page_and_article_tables.py  2023_11_09_2031-02e515c5bb2a_add_execution_and_embedding_tables.py  2023_11_10_1353-9dc94625627f_create_tables.py  2023_11_15_1113-66844fb0654a_add_tables.py  2023_11_16_1650-e8f9a954be12_add_some_fields_and_constraints.py  2023_12_04_1338-46c271f8f06f_remove_article_exclude_reason_field_.py  2023_12_04_1619-70e5e82e94c0_column_changes_following_pydantic_.py  2023_12_04_2010-1feba14fd658_add_more_article_fields.py  2023_12_08_1526-e8ee289b5631_remove_sqlmodel_annotated_and_disable_.py  2024_01_10_1554-1c865617a68f_rename_execution_table_drop_strategy_.py  2024_01_17_1015-83af0e3a4df3_remove_score_0_1_constraint.py
article_rec_db/: _0_init_db.py  models.py
article_rec_db/db/: controller.py  database.py  extension.py  helpers.py  role.py  table.py
article_rec_db/models/: __init__.py  article.py  base.py  embedding.py  execution.py  helpers.py  page.py  recommendation.py  recommender.py
article_rec_db/sites/: __init__.py  base.py  sites.py
db_init_steps/: _0_create_db.py  _0_init_db.py  _1_init_db.py  _2_add_embedding_models.py
migrations/: V0001__initial_schema.sql  V0002__add_model_index.sql  V0003__add_site.sql  V0004__populate_site.sql  V0005__add_model_site.sql  V0006__external_id_to_text.sql  V0007__add_path.sql  V0008__add_index_recs_model.sql  V0009__cycle_rec_id.sql  V0010__change_rec_id_to_bigint.sql
terraform/modules/db/: main.tf  variables.tf  versions.tf
terraform/stages/dev/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf  versions.tf
tests/integration/: test_init_db.py  test_models.py
tests/integration/models/: conftest.py  test_article.py  test_embedding.py  test_execution.py  test_page.py  test_recommendation.py  test_recommender.py
