[tool.poetry]
description = "Database models and imgrations for the Local News Lab's article recommendation system"
name = "lnl-article-rec-db"
version = "0.0.1"
authors = ["Duy Nguyen <hello.duyknguyen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LocalAtBrown/article-rec-db/"
repository = "https://github.com/LocalAtBrown/article-rec-db/"
documentation = "https://github.com/LocalAtBrown/article-rec-db/"
packages = [{ include = "article_rec_db" }]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.76"
boto3-stubs = { version = "^1.28.76", extras = ["ssm"] }
sqlmodel = "^0.0.11"

[tool.poetry.group.dev.dependencies]
alembic = "^1.12.1"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-order = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
line-length = 122
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
# use the strict option since this a new project
strict = "True"
implicit_reexport = "True"
files = "."
exclude = ['\.venv', 'tests']
